[package]
name = "rpi-simon-says"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rp-pico = "0.9"
cortex-m = "0.7"
cortex-m-rt = "0.7"
panic-halt = "1.0"
embedded-hal = "1.0"
embedded-alloc = "0.6"
rand = { version = "0.9", features = ["small_rng"], default-features = false }
